--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -8,33 +8,8 @@
 		    type: 'PUT',
 		    dataType: "xml",
 		    data:$("#updateForm").serialize(),
-		    success: function(xml) {
-		    	console.log(xml);
-		    	var user="";
-		    	$(xml).find('User').each(function(){
-	                $(this).find("empId").each(function(){
-	                    var id = $(this).text();
-	                    console.log(empId);
-	                    user=user+"ID: "+empId;
-	                });
-	                $(this).find("username").each(function(){
-	                    var name = $(this).text();
-	                    console.log(username);
-	                    user=user+" Name: "+username;
-	                });
-	                $(this).find("passwordHash").each(function(){
-	                    var age = $(this).text();
-	                    console.log(passwordHash);
-	                    user=user+" password: "+passwordHash;
-	                });
-	                
-	                $(this).find("role").each(function(){
-	                    var age = $(this).text();
-	                    console.log(role);
-	                    user=user+" role: "+role;
-	                });
-	            });
-		    	alert(user);
+		    success: function(result) {
+		    	console.log(result);
 		    }
 		});
 	   return true;
