--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">
+$(document).ready(function () {
 $("#deleteForm").on("submit", function(){
-	$.ajax({
-	    url: '/userInfo',
-	    type: 'DELETE',
-	    dataType: "xml",
-	    data:$("#deleteForm").serialize(),
-	    success: function(xml) {
-	    	console.log(xml);
-	    	$(xml).find('User').each(function(){
-                $(this).find("id").each(function(){
-                    var id = $(this).text();
-                    console.log(id);
-                    alert("Deleted the user with id "+id);
-                });
-            });
-	    	
-	    }
-	});
+    $.ajax({
+        url: '/delete',
+        type: 'DELETE',
+        dataType: "xml",
+        data:$("#deleteForm").serialize(),
+        success: function(result) {
+            console.log(result);
+        }
+    });
    return true;
  })
-
-
+});
 </script>
 <head>
 <title>Delete User</title>
 </head>
 <body>
-	<div style="padding-left:50px;font-family:monospace;">
-		<h2>Delete User</h2>
-		<form id="deleteForm">
-			<div style="width: 100px; text-align:left;">
-				<div style="padding:15px;">
-					Enter Employee ID: <input name="empId" />
-				</div>
-				<div style="padding:20px;text-align:center">
-					<input type="submit" value="Submit" />
-				</div>
-			</div>
-		</form>
-	</div>
+    <div style="padding-left:50px;font-family:monospace;">
+        <h2>Delete User</h2>
+        <form id="deleteForm">
+            <div style="width: 100px; text-align:left;">
+                <div style="padding:15px;">
+                    Emp ID: <input name="empId" />
+                </div>
+                <div style="padding:20px;text-align:center">
+                    <input type="submit" value="Submit" />
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
